--- a/styles/sheetcard.scss
+++ b/styles/sheetcard.scss
@@ -75,7 +75,7 @@
      position: absolute;
      inset: 0;
      
-     background: url('../../textures/Metal056B_1K-JPG_Color.jpg') center / 2000px 2000px;
+     background: url('../../textures/Metal056B_1K-JPG_Color.jpg') center / 1000px 1000px;
      opacity: 1;
      mix-blend-mode: multiply;
      pointer-events: none;
